--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>MyAngularApp</title>
+  <title>Bucharest Explorer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../src/assets/logo-white.png">
 </head>
+
 <body>
+  <!-- selectorul trebuie să fie același ca în AppComponent -->
   <app-root></app-root>
 </body>
+
 </html>
